build: make qt515 available and use correct qmake

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -73,5 +73,7 @@ parts:
      source-subdir: src/
      override-build: |
             snapcraftctl build
+            . /opt/qt515/bin/qt515-env.sh
+            which qmake
             sed -i 's|Icon=.*|Icon=${SNAP}/meta/gui/icon.png|g' ${SNAPCRAFT_PART_SRC}/worddle.desktop
             cp -rf ${SNAPCRAFT_PART_SRC}/worddle.desktop ${SNAPCRAFT_PART_INSTALL}/usr/share/applications/worddle.desktop
