--- a/src/worddle.desktop
+++ b/src/worddle.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-GenericName=Word puzzle game
+GenericName=Word guessing game
 Name[en_US]=Worddle
 Comment=Guess a five-letter word in six attempts
 Name=Worddle
