build(snap): create install target for desktop file

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -90,4 +90,5 @@ parts:
             make -j4
             
             sed -i 's|Icon=.*|Icon=${SNAP}/meta/gui/icon.png|g' ${SNAPCRAFT_PART_SRC}/src/worddle.desktop
+            mkdir -p ${SNAPCRAFT_PART_INSTALL}/usr/share/applications
             cp -rf ${SNAPCRAFT_PART_SRC}/src/worddle.desktop ${SNAPCRAFT_PART_INSTALL}/usr/share/applications/worddle.desktop
