--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -16,7 +16,7 @@ architectures:
 
 apps:
   worddle:
-    command: desktop-launch worddle
+    command: /usr/bin/worddle
     environment:
        DISABLE_WAYLAND: 1
     desktop: usr/share/applications/worddle.desktop
@@ -68,21 +68,18 @@ parts:
      override-build: |
             snapcraftctl build
             apt install -y build-essential qt515base qt515tools qt515webengine libgl1-mesa-dev
-            export PATH=/opt/qt515/bin:$PATH
-            export LD_LIBRARY_PATH=/opt/qt515/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
-            export PKG_CONFIG_PATH=/opt/qt515/lib/pkgconfig${PKG_CONFIG_PATH:+:$PKG_CONFIG_PATH}
             
             QT_BASE_DIR=/opt/qt515
             export QTDIR=$QT_BASE_DIR
             export PATH=$QT_BASE_DIR/bin:$PATH
 
             if [[ $(uname -m) == "x86_64" ]]; then
-              export LD_LIBRARY_PATH=$QT_BASE_DIR/lib/x86_64-linux-gnu:$QT_BASE_DIR/lib:$LD_LIBRARY_PATH
+              export LD_LIBRARY_PATH=$QT_BASE_DIR/lib/x86_64-linux-gnu:$QT_BASE_DIR/lib:${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
             else
-              export LD_LIBRARY_PATH=$QT_BASE_DIR/lib/i386-linux-gnu:$QT_BASE_DIR/lib:$LD_LIBRARY_PATH
+              export LD_LIBRARY_PATH=$QT_BASE_DIR/lib/i386-linux-gnu:$QT_BASE_DIR/lib:${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
             fi
 
-            export PKG_CONFIG_PATH=$QT_BASE_DIR/lib/pkgconfig:$PKG_CONFIG_PATH
+            export PKG_CONFIG_PATH=$QT_BASE_DIR/lib/pkgconfig:${PKG_CONFIG_PATH:+:$PKG_CONFIG_PATH}
 
             which qmake
             
