chore: fix desktop icon

--- a/src/worddle.desktop
+++ b/src/worddle.desktop
@@ -5,7 +5,7 @@ Name[en_US]=Worddle
 Comment=Guess a five-letter word in six attempts
 Name=Worddle
 Type=Application
-Icon=${SNAP}/meta/gui/icon.png
+Icon=worddle
 Keywords=game;puzzle;guess;vocab
 Exec=worddle %F
 Categories=Game;Qt;
