--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,8 +2,7 @@ name: worddle
 version: '1.0'
 summary: Guess a five-letter word in siz attempts
 description: |
-  Wordle is a web-based word game developed by Josh Wardle. Players have six attempts to guess a five-letter word; feedback is given for each guess, in the form of colored tiles, indicating when letters match or occupy the correct position. 
-
+  Wordle is a web-based word game developed by Josh Wardle. Players have six attempts to guess a five-letter word; feedback is given for each guess, in the form of colored tiles, indicating when letters match or occupy the correct position.
 grade: stable
 confinement: strict
 icon: snap/gui/icon.png
@@ -15,7 +14,15 @@ architectures:
     run-on: amd64
 
 environment:
-  SNAP_DESKTOP_RUNTIME: $SNAP/qt5-core20
+  SNAP_DESKTOP_RUNTIME: $SNAP/qt515-core20
+
+package-repositories:
+  - type: apt
+    formats: [deb]
+    components: [main]
+    suites: [focal]
+    key-id: C65D51784EDC19A871DBDBB710C56D0DE9977759
+    url: https://ppa.launchpadcontent.net/beineri/opt-qt-5.15.2-focal/ubuntu
 
 apps:
   worddle:
@@ -48,27 +55,44 @@ plugs:
     interface: content
     target: $SNAP/data-dir/sounds
     default-provider: gtk-common-themes
-  qt5-core20:
+  qt515-core20:
     interface: content
-    target: $SNAP/qt5-core20
-    default-provider: qt5-core20
+    target: $SNAP/qt515-core20
+    default-provider: qt515-core20
+
 
 parts:
-   build-src:
-     plugin: qmake
-     build-packages:
-       - build-essential
-       - qtbase5-dev
-       - qttools5-dev
-       - qtwebengine5-dev
+  build-src:
+     plugin: nil
      source: https://github.com/keshavbhatt/worddle.git
      source-subdir: src/
      override-build: |
             snapcraftctl build
+
+            apt install -y build-essential qt515base qt515tools qt515webengine libgl1-mesa-dev
+
+            QT_BASE_DIR=/opt/qt515
+            export QTDIR=$QT_BASE_DIR
+            export PATH=$QT_BASE_DIR/bin:$PATH
+
+            if [[ $(uname -m) == "x86_64" ]]; then
+              export LD_LIBRARY_PATH=$QT_BASE_DIR/lib/x86_64-linux-gnu:$QT_BASE_DIR/lib:${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+            else
+              export LD_LIBRARY_PATH=$QT_BASE_DIR/lib/i386-linux-gnu:$QT_BASE_DIR/lib:${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+            fi
+
+            export PKG_CONFIG_PATH=$QT_BASE_DIR/lib/pkgconfig:${PKG_CONFIG_PATH:+:$PKG_CONFIG_PATH}
+
+            which qmake
+
+            /opt/qt515/bin/qmake src
+            make -j4
+
             sed -i 's|Icon=.*|Icon=${SNAP}/meta/gui/icon.png|g' ${SNAPCRAFT_PART_SRC}/src/worddle.desktop
             mkdir -p ${SNAPCRAFT_PART_INSTALL}/usr/share/applications
             cp -rf ${SNAPCRAFT_PART_SRC}/src/worddle.desktop ${SNAPCRAFT_PART_INSTALL}/usr/share/applications/worddle.desktop
-   snap-launcher:
+
+  snap-launcher:
      plugin: dump
      source-type: local
      source: snap_launcher/
