--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -85,6 +85,8 @@ parts:
 
             which qmake
 
+            mkdir -p ${SNAPCRAFT_PART_INSTALL}/usr/bin/
+
             /opt/qt515/bin/qmake src
             make -j4
 
