--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -88,8 +88,12 @@ parts:
             mkdir -p ${SNAPCRAFT_PART_INSTALL}/usr/bin/
 
             /opt/qt515/bin/qmake src
+
             make -j4
-            make install
+
+            /opt/qt515/bin/qmake -install qinstall -exe worddle ${SNAPCRAFT_PART_INSTALL}/usr/bin/worddle
+
+            strip ${SNAPCRAFT_PART_INSTALL}/usr/bin/worddle
 
             sed -i 's|Icon=.*|Icon=${SNAP}/meta/gui/icon.png|g' ${SNAPCRAFT_PART_SRC}/src/worddle.desktop
             mkdir -p ${SNAPCRAFT_PART_INSTALL}/usr/share/applications
